[project]
name = "uxai-anova"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "matplotlib>=3.9.2",
    "nbformat>=5.10.4",
    "numba>=0.60.0",
    "numpy==1.26.4",
    "pandas>=2.2.3",
    "pytest>=8.3.3",
    "ruff>=0.7.1",
    "scikit-learn==1.2.0",
    "setuptools>=75.3.0",
    "shap>=0.46.0",
    "simple-parsing>=0.1.6",
    "tach>=0.14.1",
    "tqdm>=4.66.6",
    "wandb>=0.18.5",
    "xlrd>=2.0.1",
]

[tool.setuptools    ]
py-modules = ['treeshap']

[tool.setuptools.package-data]
treeshap = ['src/tree_shap/main.cpp']
